# Proyecto_II_Server_CE2103

./: .gitignore  CMakeLists.txt  FUNDING.yml  README.md  main.cpp
.github/: FUNDING.yml
src/: ServerManager.h
src/BPGame/: BPManager.cpp  BPManager.h
src/Socket/: Server.cpp  Server.h
src/html/: _a___star_8h_source.html  _b_p_manager_8cpp_source.html  _b_p_manager_8h_source.html  _ball_8h_source.html  _bound_box_8h_source.html  _box_8h_source.html  _field_8h_source.html  _game_settings_8h_source.html  _goal_line_box_8h_source.html  _json_8h_source.html  _linked_list_8h_source.html  _matrix_8h_source.html  _message_8h_source.html  _normal_box_8h_source.html  _obstacle_box_8h_source.html  _pathfinding_8h_source.html  _player_8h_source.html  _response_8h_source.html  _route_8h_source.html  _server_8cpp_source.html  _server_8h_source.html  _server_manager_8h_source.html  _star_aux_8h_source.html  annotated.html  class_a___star-members.html  class_a___star.html  class_a___star_a376fced98f1e69a896bf4822ee88cef7_cgraph.dot  class_a___star_a376fced98f1e69a896bf4822ee88cef7_icgraph.dot  class_a___star_a3a4045c6cb02cd6eee1dc617bd2fce72_cgraph.dot  class_a___star_a3a4045c6cb02cd6eee1dc617bd2fce72_icgraph.dot  class_a___star_a3b8ac6f0a9740908cedd22ca7494ffdb_cgraph.dot  class_a___star_a6859146b12d0a63e4c887b4dcaeed2d4_cgraph.dot  class_a___star_a6859146b12d0a63e4c887b4dcaeed2d4_icgraph.dot  class_a___star_a7ddd41ea7b3ad584243e511306d9fc79_cgraph.dot  class_a___star_a7ddd41ea7b3ad584243e511306d9fc79_icgraph.dot  class_a___star_ac64b51dcff3e3205f0f71da0140f547c_cgraph.dot  (+93 more)
(+59 files in other folders)
